# cottontail

./: Dockerfile  README.md  docker-compose.yml
benchmark-test/: build-json-c.sh
benchmark-test/input/: seed
config/: config.docker.ini  config.ini
cottontail-compiler/: CMakeLists.txt  build-cottontail-compiler-docker.sh  build-cottontail-compiler.sh
cottontail-compiler/compiler/: Cottontail-c++.in  Cottontail-cc.in  Main.cpp  Pass.cpp  Runtime.cpp  Symbolizer.cpp  Symbolizer.h
cottontail-compiler/runtime/: CMakeLists.txt
cottontail-compiler/runtime/include/: RuntimeCommon.h
cottontail-compiler/runtime/src/: LibcWrappers.cpp  RuntimeCommon.cpp
cottontail-compiler/runtime/src/backends/qsym/: CMakeLists.txt  Runtime.cpp
cottontail-compiler/runtime/src/backends/qsym/qsym/qsym/pintool/: GenericTree.h  call_stack_manager.cpp  call_stack_manager.h  expr.h  expr_builder.cpp  solver.cpp  solver.h
cottontail-compiler/runtime/src/backends/qsym/qsym/qsym/pintool/nlohmann/detail/input/: parser.hpp
cottontail-compiler/runtime/src/backends/simple/: CMakeLists.txt
cottontail-compiler/test/: CMakeLists.txt  arrays.c  bcopy_bcmp_bzero.c  bool_cast.c  bswap.c  file_input.c  floats.c  globals.c  if.c  integers.c  large_alloc.c  lit.cfg  loop.c  memcpy.c  memory_input.c  pointers.c  read.c  strings.c  structs.c  switch.c  test_case_handler.c  test_file_input  test_file_input.dump.txt
scripts/: collect_coverage.sh  prepare.sh  run-cottontail.py
